<resources>
    <string name="app_name">PayBill Manager</string>

    <!-- Toolbar Titles -->
    <string name="toolbar_upcoming_bills">Upcoming Bills</string>
    <string name="toolbar_add_bill">Add Bill</string>

    <!-- Text-->
    <string name="text_bill_data">04</string>
    <string name="text_bill_month">JUN</string>
    <string name="text_bill_title">Safaricom PostPaid</string>
    <string name="text_bill_number">Paybill Number: 200200</string>
    <string name="text_bill_amount">kes 4, 700</string>
    <string name="text_current_expenses">Current Expenses</string>
    <string name="text_amount">2,400</string>
    <string name="text_amount_placeholder">0</string>
    <string name="text_view_currency_code">Ksh</string>

    <!-- Calculator Keyboard TextViews -->
    <string name="keyboard_1">1</string>
    <string name="keyboard_2">2</string>
    <string name="keyboard_3">3</string>
    <string name="keyboard_4">4</string>
    <string name="keyboard_5">5</string>
    <string name="keyboard_6">6</string>
    <string name="keyboard_7">7</string>
    <string name="keyboard_8">8</string>
    <string name="keyboard_9">9</string>
    <string name="keyboard_decimal">.</string>
    <string name="keyboard_0">0</string>
    <string name="keyboard_clear">Clear</string>

    <string name="text_finish">Finish</string>
    <string name="text_details">Details</string>
    <string name="text_reminder">Set Reminder</string>
    <string name="toolbar_title_add_bill">Add Bill</string>
    <string name="text_choose_category">Choose Category</string>

    <!-- Text Hints-->
    <string name="hint_bill_amount">Bill Amount</string>
    <string name="hint_paybill_number">PayBill Number</string>
    <string name="hint_add_a_note">Add a note</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_label">Label/Name</string>

    <!-- Error Messages -->
    <string name="error_no_amount">Please enter an amount</string>
    <string name="error_category_not_selected">Please select a category</string>

</resources>
