<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_t9_key_1"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_1"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_4"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_t9_key_2"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_2"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_5"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_t9_key_3"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_3"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_t9_key_4"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_4"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_7"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_1" />

    <TextView
        android:id="@+id/tv_t9_key_5"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_5"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_8"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_4"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_2" />

    <TextView
        android:id="@+id/tv_t9_key_6"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_6"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_5"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_3" />

    <TextView
        android:id="@+id/tv_t9_key_7"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_7"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_decimal"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_4" />

    <TextView
        android:id="@+id/tv_t9_key_8"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_8"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_0"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_7"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_5" />

    <TextView
        android:id="@+id/tv_t9_key_9"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_9"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_8"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_6" />

    <TextView
        android:id="@+id/tv_t9_key_decimal"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_decimal"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_7" />

    <TextView
        android:id="@+id/tv_t9_key_0"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:gravity="center"
        android:text="@string/keyboard_0"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_00"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_decimal"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_8" />

    <ImageView
        android:id="@+id/tv_t9_key_00"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/calculator_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_0"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_9" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:elevation="0dp"
        app:layout_behavior="com.thomaskioko.paybillmanager.mobile.ui.view.ScrollAwareFABBehavior"
        app:layout_constraintBottom_toBottomOf="@+id/tv_t9_key_00"
        app:layout_constraintEnd_toEndOf="@+id/tv_t9_key_00"
        app:layout_constraintStart_toStartOf="@+id/tv_t9_key_00"
        app:layout_constraintTop_toTopOf="@+id/tv_t9_key_00"
        app:srcCompat="@drawable/ic_done_24dp"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>