<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_date_view"
            style="@style/TextAppearance.PayBillManager.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_x_medium"
            android:layout_marginLeft="@dimen/spacing_x_medium"
            android:layout_marginTop="@dimen/spacing_x_medium"
            android:layout_marginEnd="@dimen/spacing_x_medium"
            android:layout_marginRight="@dimen/spacing_x_medium"
            android:gravity="start"
            android:textColor="@color/error"
            android:textSize="@dimen/text_size_xxl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/text_bill_data" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_month_view"
            style="@style/TextAppearance.PayBillManager.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_date_view"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/spacing_x_medium"
            android:layout_marginLeft="@dimen/spacing_x_medium"
            android:layout_marginTop="@dimen/spacing_x_medium"
            android:layout_marginEnd="@dimen/spacing_x_medium"
            android:layout_marginRight="@dimen/spacing_x_medium"
            android:gravity="start"
            android:textColor="@color/error"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/text_bill_month" />

    </RelativeLayout>

    <!-- LineView-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/spacing_sm_large"
        android:layout_marginLeft="@dimen/spacing_sm_large"
        android:layout_marginTop="@dimen/spacing_middle"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/grey_10" />

        <ImageView
            android:layout_width="@dimen/spacing_middle"
            android:layout_height="@dimen/spacing_middle"
            android:layout_marginTop="@dimen/spacing_large"
            android:contentDescription="@null"
            android:tint="@color/error"
            app:srcCompat="@drawable/shape_round_solid" />

    </RelativeLayout>

    <!-- Account Details -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_bill_name"
                style="@style/TextAppearance.PayBillManager.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/overlay_dark_80"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                tools:text="@string/text_bill_title" />


        </LinearLayout>

        <TextView
            style="@style/TextAppearance.PayBillManager.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium"
            android:lineSpacingExtra="@dimen/spacing_medium"
            android:text="@string/text_bill_number"
            android:textColor="@color/grey_60" />

        <TextView
            style="@style/TextAppearance.PayBillManager.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:lineSpacingExtra="@dimen/spacing_medium"
            android:textColor="@color/grey_60"
            tools:text="@string/text_bill_amount" />

    </LinearLayout>


</LinearLayout>

